# velum

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
docs/source/: client.rst  conf.py  events.rst  exceptions.rst  index.rst  models.rst
examples/: attachment.py  bot.py  exception.py  speedups.py
velum/: __init__.py  __main__.py  async_utils.py  bot.py  entity_factory.py  errors.py  event_factory.py  event_manager.py  event_manager_base.py  files.py  gateway.py  models.py  rate_limits.py  rest.py  routes.py  traits.py  typing_patches.py
velum/api/: entity_factory_trait.py  event_factory_trait.py  event_manager_trait.py  gateway_trait.py  rate_limit_trait.py  rest_trait.py
velum/events/: __init__.py  base_events.py  connection_events.py  message_events.py  user_events.py
velum/impl/: bot.py  client.py  entity_factory.py  event_factory.py  event_manager.py  event_manager_base.py  gateway.py  rate_limits.py  rest.py
velum/internal/: __init__.py  async_utils.py  class_utils.py  data_binding.py  typing_patches.py
velum/traits/: base_traits.py  entity_factory_trait.py  event_factory_trait.py  event_manager_trait.py  gateway_trait.py  rate_limit_trait.py  rest_trait.py
